Https Support for SDK